--- a/Service/Clustering/pom.xml
+++ b/Service/Clustering/pom.xml
@@ -70,7 +70,32 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>spring</classifier>
+                    <mainClass>com.hzgc.service.clustering.ClusteringApplication</mainClass>
+                </configuration>
+                <!--<executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal> 可以把依赖的包都打包到生成的Jar包中
+                        </goals>
+                    </execution>
+                </executions>-->
+            </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <targetPath>${project.build.directory}/classes/META-INF/spring</targetPath>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 
 </project>
