--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -52,24 +52,24 @@ es_hosts=172.18.18.103
 es_cluster_port=9300
 
 ##ES索引模糊查询最小、最大字符数
-Min_Gram=2
-Max_Gram=20
+min_gram=2
+max_gram=20
 
 ##ES索引分片、副本数，分片数和ES节点个数相同
-Number_Of_Shards=5
-Number_Of_Replicas=1
+number_of_shards=5
+number_of_replicas=1
 
 ##ES索引最大分页搜素文档数
-Max_Result_Window=1000000000
+max_result_window=1000000000
 
 #spark thriftserver的主机名:e.x:s115;s116;s117
 jdbc_service_node=
 
 #需要分发common目录的节点主机名：e.x:s115;s116;s117
-Cluster_HostName=
+cluster_hostname=
 
 ## 大数据相关的组件安装根目录
-Install_HomeDir=/opt/hzgc/bigdata
+install_homedir=/opt/hzgc/bigdata
 
 #---------------------------------------------------------------------#
 #                         Spring Cloud配置                             #
