--- a/Service/StaRepo/src/main/resources/application-dev.properties
+++ b/Service/StaRepo/src/main/resources/application-dev.properties
@@ -1,9 +1,13 @@
 ##### Spring Cloud 相关配置 #####
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7776
 spring.application.name=staRepo
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+eureka.instance.status-page-url=http://172.18.18.146:${server.port}/swagger-ui.html
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+spring.cloud.config.enabled=false
 ################################
 
 ##### 连接池相关配置 #####
@@ -26,9 +30,9 @@ static.repo.table.maxversion=1
 ########################
 
 ##### kafka相关配置 #####
-kafka.bootstrap.servers=
-kafka.request.required.acks=-1
-kafka.retries=0
-kafka.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+bootstrap.servers=172.18.18.100:9092
+request.required.acks=-1
+retries=0
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 ########################
