--- a/Service/Address/src/main/resources/log4j.properties
+++ b/Service/Address/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=INFO,console,dateLogger,errorLogger
-
+log4j.rootLogger=INFO,console
+#INFO,dateLogger,errorLogger
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.Threshold=INFO
