--- a/Cluster/Spark/src/main/resources/log4j.properties
+++ b/Cluster/Spark/src/main/resources/log4j.properties
@@ -1,20 +1,3 @@
-#
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
 # Set everything to be logged to the console
 log4j.rootCategory=INFO, FILE
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -39,12 +22,13 @@ log4j.logger.parquet=ERROR
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
 log4j.logger.org.apache.hadoop.hive.ql.exec.FunctionRegistry=ERROR
 
-### 设置每天产生一个日志文件 ###
-log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.File=/opt/RealTimeCompare/cluster/logs/schema-merge-parquet-file.log
+### 按文件大小生成日志 ###
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.FILE.File=logs/schema-merge-parquet-file.log
+log4j.appender.FILE.MaxFileSize=65535KB
+log4j.appender.FILE.MaxBackupIndex=3
 log4j.appender.FILE.Append=true
 log4j.appender.FILE.Threshold=INFO
-log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d : %p : %c{1} : %m%n
 
