--- a/Service/StaRepo/src/main/resources/application-pro.properties
+++ b/Service/StaRepo/src/main/resources/application-pro.properties
@@ -2,7 +2,7 @@
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7776
 spring.application.name=staRepo
-eureka.instance.status-page-url=http://${server.ip}:${server.port}/swagger-ui.html
+eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
