--- a/Service/StaRepo/src/main/resources/application-pro.properties
+++ b/Service/StaRepo/src/main/resources/application-pro.properties
@@ -1,6 +1,10 @@
 ##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7776
+info.version=@project.version@
+endpoints.health.sensitive=false
+endpoints.health.enabled=true
+management.security.enabled=false
 spring.application.name=staRepo
 eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
