--- a/Service/Dispatch/src/main/resources/application-dev.properties
+++ b/Service/Dispatch/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 #####  SpringCloud 相关配置#####
-eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.18.18.40:9000/eureka/
 server.port=7773
-spring.application.name=bigdevice
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
+spring.application.name=dispatch
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
