--- a/Service/Address/pom.xml
+++ b/Service/Address/pom.xml
@@ -37,6 +37,12 @@
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-collect</artifactId>
             <version>${bigdata-common.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
